--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="https://use.typekit.net/jwl6hhc.css">
+    <link rel="canonical" href="https://rdwthr.com/" />
     <meta property="og:title" content="Red Weather | Official Site">
     <meta property="og:site_name" content="Red Weather | Official Site">
     <meta property="og:image" content="https://rdwthr.com/img/hero-photo.webp" />
@@ -26,7 +27,7 @@
             <a class="nav-link font-bodega-black" href="http://merch.rdwthr.com" target="_blank">MERCH</a>
         </div>
         <div id="header-wrapper" class="img-wrapper">
-            <a href="/"><img class="header-logo"  src="img/logo-white.svg"></a>
+            <a href="/"><img class="header-logo"  src="img/logo-white.svg" alt="Red Weather Logo"></a>
         </div>
         <div class="header-links">
             <a class="nav-link font-bodega-black" href="https://rdwthr.com/shows">SHOWS</a>
@@ -46,14 +47,14 @@
     </div>
 
     <div class="mobile-photo">
-        <img src="img/hero-photo.webp">
+        <img src="img/hero-photo.webp" alt="Photo of Red Weather band members on a couch">
     </div>
 
     <div id="music" class="music-section">
-        <h2 class="section-title"><a class="font-bodega-black" href="#home">MUSIC</a></h2>
+        <h1 class="section-title"><a class="font-bodega-black" href="#home">MUSIC</a></h1>
         <div class="music-icons">
-            <a href="https://open.spotify.com/artist/30dMK7zX4FAosW0skEzqF1?si=EJ2VbXX6TfWAxlP_XSU_YQ" target="_blank"><img src="img/icons/spotify.png"></a>
-            <a href="https://music.apple.com/us/artist/red-weather/1499670090" target="_blank"><img src="img/icons/applemusic.png"></a>
+            <a href="https://open.spotify.com/artist/30dMK7zX4FAosW0skEzqF1?si=EJ2VbXX6TfWAxlP_XSU_YQ" target="_blank"><img src="img/icons/spotify.png" alt="Red Weather on Spotiofy"></a>
+            <a href="https://music.apple.com/us/artist/red-weather/1499670090" target="_blank"><img src="img/icons/applemusic.png" alt="Red Weather on Apple Music"></a>
         </div>
         <div class="music-video">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/Ixbh83VzbUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -68,18 +69,18 @@
         <div class="about-text">
             <div class="about-box">
                 <div class="mobile-about-photo">
-                    <img src="img/wall-purple-bg.webp">
+                    <img src="img/wall-purple-bg.webp" alt="Red Weather Band Photo">
                 </div>
                 <div class="index-social-wrapper">
                     <ul class="index-social-links">
-                        <li><a href="https://open.spotify.com/artist/30dMK7zX4FAosW0skEzqF1?si=EJ2VbXX6TfWAxlP_XSU_YQ"><img src="img/icons/spotify.png"></a></li>
-                        <li><a href="https://music.apple.com/us/artist/red-weather/1499670090" target="_blank"><img src="img/icons/applemusic.png"></a></li>
-                        <li><a href="https://instagram.com/rdwthr" target="_blank"><img src="img/icons/instagram.png"></a></li>
-                        <li><a href="https://www.tiktok.com/@rdwthr?_t=8YWqXv3SJ1q&_r=1" target="_blank"><img src="img/icons/tiktok.png"></a></li>
-                        <li><a href="https://www.youtube.com/@redweather" target="_blank"><img src="img/icons/youtube.png"></a></li>
-                        <li><a href="https://www.facebook.com/rdwthr" target="_blank"><img src="img/icons/facebook.png"></a></li>
-                        <li><a href="https://twitter.com/rdwthr?s=21&t=yCKW4P7k5O_KH-HWxrmm3w" target="_blank"><img src="img/icons/twitter.png"></a></li>
-                        <li><a href="mailto:tim@rdwthr.com" target="_blank"><img src="img/icons/email.svg"></a></li>
+                        <li><a href="https://open.spotify.com/artist/30dMK7zX4FAosW0skEzqF1?si=EJ2VbXX6TfWAxlP_XSU_YQ"><img src="img/icons/spotify.png" alt="Red Weather on Spotify"></a></li>
+                        <li><a href="https://music.apple.com/us/artist/red-weather/1499670090" target="_blank"><img src="img/icons/applemusic.png" alt="Red Weather on Apple Music"></a></li>
+                        <li><a href="https://instagram.com/rdwthr" target="_blank"><img src="img/icons/instagram.png" alt="Red Weather Instagram Page"></a></li>
+                        <li><a href="https://www.tiktok.com/@rdwthr?_t=8YWqXv3SJ1q&_r=1" target="_blank"><img src="img/icons/tiktok.png" alt="Red Weather TikTok"></a></li>
+                        <li><a href="https://www.youtube.com/@redweather" target="_blank"><img src="img/icons/youtube.png" alt="Red Weather YouTube Channel"></a></li>
+                        <li><a href="https://www.facebook.com/rdwthr" target="_blank"><img src="img/icons/facebook.png" alt="Red Weather Facebook Page"></a></li>
+                        <li><a href="https://twitter.com/rdwthr?s=21&t=yCKW4P7k5O_KH-HWxrmm3w" target="_blank"><img src="img/icons/twitter.png" alt="Red Weather Twitter Profile"></a></li>
+                        <li><a href="mailto:tim@rdwthr.com" target="_blank"><img src="img/icons/email.svg" alt="Red Weather Email Address"></a></li>
                     </ul>
                 </div>
                 <div class="about-paragraphs">
