--- a/presskit.html
+++ b/presskit.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="https://use.typekit.net/jwl6hhc.css">
+    <link rel="canonical" href="https://rdwthr.com/presskit" />
     <meta property="og:title" content="Red Weather | Official Site | Press Kit">
     <meta property="og:site_name" content="Red Weather | Official Site | Press Kit">
     <meta property="og:image" content="https://rdwthr.com/img/hero-photo.webp" />
@@ -25,7 +26,7 @@
             <a class="nav-link font-bodega-black" href="http://merch.rdwthr.com" target="_blank">MERCH</a>
         </div>
         <div id="header-wrapper" class="img-wrapper">
-            <a href="/"><img class="header-logo"  src="img/logo-white.svg"></a>
+            <a href="/"><img class="header-logo"  src="img/logo-white.svg" alt="Red Weather Logo"></a>
         </div>
         <div class="header-links">
             <a class="nav-link font-bodega-black" href="https://rdwthr.com/shows">SHOWS</a>
@@ -43,7 +44,7 @@
     <div class="press-section">
         <div class="press-header press-width">
             <h2 class="font-bodega-black">Press Kit</h2>
-            <img class="press-header-photo" src="img/hero-photo.webp">
+            <img class="press-header-photo" src="img/hero-photo.webp" alt="Photo of Red Weather band members on a couch">
             <div class="video-container">
                 <iframe src="https://www.youtube.com/embed/Ixbh83VzbUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
@@ -66,14 +67,14 @@
         <div class="press-socials press-width">
             <h2 class="font-bodega-black">Socials</h2>
             <ul class="press-social-links">
-                <li><a href="https://open.spotify.com/artist/30dMK7zX4FAosW0skEzqF1?si=EJ2VbXX6TfWAxlP_XSU_YQ" target="_blank"><img src="img/icons/spotify.png"></a></li>
-                <li><a href="https://music.apple.com/us/artist/red-weather/1499670090" target="_blank"><img src="img/icons/applemusic.png"></a></li>
-                <li><a href="https://instagram.com/rdwthr" target="_blank"><img src="img/icons/instagram.png"></a></li>
-                <li><a href="https://www.tiktok.com/@rdwthr?_t=8YWqXv3SJ1q&_r=1" target="_blank"><img src="img/icons/tiktok.png"></a></li>
-                <li><a href="https://www.youtube.com/@redweather" target="_blank"><img src="img/icons/youtube.png"></a></li>
-                <li><a href="https://www.facebook.com/rdwthr" target="_blank"><img src="img/icons/facebook.png"></a></li>
-                <li><a href="https://twitter.com/rdwthr?s=21&t=yCKW4P7k5O_KH-HWxrmm3w" target="_blank"><img src="img/icons/twitter.png"></a></li>
-                <li><a href="mailto:tim@rdwthr.com" target="_blank"><img src="img/icons/email.svg"></a></li>
+                <li><a href="https://open.spotify.com/artist/30dMK7zX4FAosW0skEzqF1?si=EJ2VbXX6TfWAxlP_XSU_YQ" target="_blank"><img src="img/icons/spotify.png" alt="Red Weather on Spotify"></a></li>
+                <li><a href="https://music.apple.com/us/artist/red-weather/1499670090" target="_blank"><img src="img/icons/applemusic.png" alt="Red Weather on Apple Music"></a></li>
+                <li><a href="https://instagram.com/rdwthr" target="_blank"><img src="img/icons/instagram.png" alt="Red Weather Instagram Page"></a></li>
+                <li><a href="https://www.tiktok.com/@rdwthr?_t=8YWqXv3SJ1q&_r=1" target="_blank"><img src="img/icons/tiktok.png" alt="Red Weather TikTok"></a></li>
+                <li><a href="https://www.youtube.com/@redweather" target="_blank"><img src="img/icons/youtube.png" alt="Red Weather YouTube Channel"></a></li>
+                <li><a href="https://www.facebook.com/rdwthr" target="_blank"><img src="img/icons/facebook.png" alt="Red Weather Facebook Page"></a></li>
+                <li><a href="https://twitter.com/rdwthr?s=21&t=yCKW4P7k5O_KH-HWxrmm3w" target="_blank"><img src="img/icons/twitter.png" alt="Red Weather Twitter Account"></a></li>
+                <li><a href="mailto:tim@rdwthr.com" target="_blank"><img src="img/icons/email.svg" alt="Red Weather Email Address"></a></li>
             </ul>
         </div>
 
@@ -97,18 +98,18 @@
             <p class="font-gimlet-reg">(Click for full resolution / more)</p>
             </div>
             <li class="press-photo-list">
-                <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/hero-photo.webp"></a>
-                <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/wall-purple-bg.webp"></a>
-                <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/wall-white-bg.webp"></a>
-                <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/logo-pack.webp"></a>
+                <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/hero-photo.webp" alt="Red Weather band members on a couch"></a>
+                <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/wall-purple-bg.webp" alt="Red Weather band members against a purple wall"></a>
+                <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/wall-white-bg.webp" alt="Red Weather band members against a gray wall"></a>
+                <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/logo-pack.webp" alt="Multiple logos for Red Weather Press Usage"></a>
             </li>
         </div>
 
         <div class="press-music press-width">
             <h2 class="font-bodega-black">Music</h2>
             <div class="press-music-icons">
-                <a href="https://open.spotify.com/artist/30dMK7zX4FAosW0skEzqF1?si=EJ2VbXX6TfWAxlP_XSU_YQ" target="_blank"><img src="img/icons/spotify.png"></a>
-                <a href="https://music.apple.com/us/artist/red-weather/1499670090" target="_blank"><img src="img/icons/applemusic.png"></a>
+                <a href="https://open.spotify.com/artist/30dMK7zX4FAosW0skEzqF1?si=EJ2VbXX6TfWAxlP_XSU_YQ" target="_blank"><img src="img/icons/spotify.png" alt="Red Weather on Spotify"></a>
+                <a href="https://music.apple.com/us/artist/red-weather/1499670090" target="_blank"><img src="img/icons/applemusic.png" alt="Red Weather on Apple Music"></a>
             </div>
             <div id="press-music-player" class="music-player-wrapper">
                 <iframe src="https://bandcamp.com/EmbeddedPlayer/album=1768569331/size=large/bgcol=333333/linkcol=9a64ff/artwork=small/transparent=true/" seamless><a href="https://redweather.bandcamp.com/album/wish-you-well">Wish You Well by Red Weather</a></iframe>
