--- a/shows.html
+++ b/shows.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="https://use.typekit.net/jwl6hhc.css">
+    <link rel="canonical" href="https://rdwthr.com/shows" />
     <meta property="og:title" content="Red Weather | Official Site">
     <meta property="og:site_name" content="Red Weather | Official Site">
     <meta property="og:image" content="https://rdwthr.com/img/hero-photo.webp" />
@@ -26,7 +27,7 @@
             <a class="nav-link font-bodega-black" href="http://merch.rdwthr.com" target="_blank">MERCH</a>
         </div>
         <div id="header-wrapper" class="img-wrapper">
-            <a href="/"><img class="header-logo"  src="img/logo-white.svg"></a>
+            <a href="/"><img class="header-logo"  src="img/logo-white.svg" alt="Red Weather Logo"></a>
         </div>
         <div class="header-links">
             <a class="nav-link font-bodega-black" href="https://rdwthr.com/shows">SHOWS</a>
@@ -51,7 +52,7 @@
         
         <!-- TEMPLATE -->
         <!-- <div class="show press-width">
-            <img class="show-flyer press-header-photo" src="img/shows/show3.jpg">
+            <img class="show-flyer press-header-photo" src="img/shows/show3.jpg" alt="Upcoming Red Weather show flyer">
             <h3 class="show-name">Goalkeeper, House & Home, Red Weather, The Aurora Sound, Cabera</h3>
             <p class="show-desc">
                 <b>Date:</b> April 13th, 2022<br>
@@ -68,43 +69,43 @@
         <h2 class="shows-title font-bodega-black">Past Shows</h2>
         <div class="past-shows-internal-wrapper">
             <div class="past-show-img">
-                <img class="show-flyer press-header-photo" src="img/shows/22-06-25.jpg">
+                <img class="show-flyer press-header-photo" src="img/shows/22-06-25.jpg" alt="Red Weather Show Flyer June 25, 2022">
             </div>
             <div class="past-show-img">
-                <img class="show-flyer press-header-photo" src="img/shows/22-06-24.jpg">
+                <img class="show-flyer press-header-photo" src="img/shows/22-06-24.jpg" alt="Red Weather Show Flyer June 24, 2022">
             </div>
             <div class="past-show-img">
-                <img class="show-flyer press-header-photo" src="img/shows/22-05-14.jpg">
+                <img class="show-flyer press-header-photo" src="img/shows/22-05-14.jpg" alt="Red Weather Show Flyer May 14, 2022">
             </div>
             <div class="past-show-img">
-                <img class="show-flyer press-header-photo" src="img/shows/22-04-13.jpg">
+                <img class="show-flyer press-header-photo" src="img/shows/22-04-13.jpg" alt="Red Weather Show Flyer April 13, 2022">
             </div>
             <div class="past-show-img">
-                <img class="show-flyer press-header-photo" src="img/shows/22-03-05.jpg">
+                <img class="show-flyer press-header-photo" src="img/shows/22-03-05.jpg" alt="Red Weather Show Flyer March 5, 2022">
             </div>
             <div class="past-show-img">
-                <img class="show-flyer press-header-photo" src="img/shows/21-11-03.jpg">
+                <img class="show-flyer press-header-photo" src="img/shows/21-11-03.jpg" alt="Red Weather Show Flyer November 3, 2021">
             </div>
             <div class="past-show-img">
-                <img class="show-flyer press-header-photo" src="img/shows/21-08-21.jpg">
+                <img class="show-flyer press-header-photo" src="img/shows/21-08-21.jpg" alt="Red Weather Show Flyer August 21, 2021">
             </div>
             <div class="past-show-img">
-                <img class="show-flyer press-header-photo" src="img/shows/20-02-21.jpg">
+                <img class="show-flyer press-header-photo" src="img/shows/20-02-21.jpg" alt="Red Weather Show Flyer February 20, 2020">
             </div>
             <div class="past-show-img">
-                <img class="show-flyer press-header-photo" src="img/shows/20-01-17.jpg">
+                <img class="show-flyer press-header-photo" src="img/shows/20-01-17.jpg" alt="Red Weather Show Flyer January 17, 2020">
             </div>
             <div class="past-show-img">
-                <img class="show-flyer press-header-photo" src="img/shows/19-08-04.jpg">
+                <img class="show-flyer press-header-photo" src="img/shows/19-08-04.jpg" alt="Red Weather Show Flyer August 4, 2019">
             </div>
             <div class="past-show-img">
-                <img class="show-flyer press-header-photo" src="img/shows/19-04-14.jpg">
+                <img class="show-flyer press-header-photo" src="img/shows/19-04-14.jpg" alt="Red Weather Show Flyer April 4, 2019">
             </div>
             <div class="past-show-img">
-                <img class="show-flyer press-header-photo" src="img/shows/19-03-21.jpg">
+                <img class="show-flyer press-header-photo" src="img/shows/19-03-21.jpg" alt="Red Weather Show Flyer March 21, 2019">
             </div>
             <div class="past-show-img">
-                <img class="show-flyer press-header-photo" src="img/shows/18-12-01.jpg">
+                <img class="show-flyer press-header-photo" src="img/shows/18-12-01.jpg" alt="Red Weather Show Flyer December 1, 2018">
             </div>
         </div>
     </div>
