--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
 
     <div id="music" class="music-section">
-        <h1 class="section-title"><a class="font-bodega-black" href="#home">MUSIC</a></h1>
+        <h1 class="section-title"><a class="font-bodega-black" href="#home">VIRGINIA BEACH EMO & POP-PUNK</a></h1>
         <div class="music-icons">
             <a href="https://open.spotify.com/artist/30dMK7zX4FAosW0skEzqF1?si=EJ2VbXX6TfWAxlP_XSU_YQ" target="_blank"><img src="img/icons/spotify.png" alt="Red Weather on Spotiofy"></a>
             <a href="https://music.apple.com/us/artist/red-weather/1499670090" target="_blank"><img src="img/icons/applemusic.png" alt="Red Weather on Apple Music"></a>
