Added placeholder for banner text

--- a/index.html
+++ b/index.html
@@ -42,8 +42,14 @@
         <a class="mobile-link font-bodega-black" href="/#about">ABOUT</a>
     </div>
 
-    <div class="hero">
+    <div id="mobile-banner" class="banner" style="display: none;"> <!-- DELETE INLINE "display: none;" STYLE TO SHOW BANNER -->
+        <a class="banner-text-anchor" href=""><p id="banner-text" class="banner-text font-bodega-black">A COOL ANNOUNCEMENT GOES HERE</p></a>
+    </div>
 
+    <div class="hero">
+        <div class="banner" style="display: none;"> <!-- DELETE INLINE "display: none;" STYLE TO SHOW BANNER -->
+            <a class="banner-text-anchor" href=""><p id="banner-text" class="banner-text font-bodega-black">A COOL ANNOUNCEMENT GOES HERE</p></a>
+        </div>
     </div>
 
     <div class="mobile-photo">
