Added March 5th show

--- a/shows.html
+++ b/shows.html
@@ -46,22 +46,22 @@
         <h1 class="shows-title font-bodega-black">Upcoming Shows</h1>
 
         <!-- UNCOMMENT IF NO UPCOMING SHOWS -->
-        <div class="show press-width">
+        <!-- <div class="show press-width">
             <h2 class="font-bodega-light">More shows coming soon!</h2>
-        </div>
+        </div> -->
         
         <!-- TEMPLATE -->
-        <!-- <div class="show press-width">
-            <img class="show-flyer press-header-photo" src="img/shows/show3.jpg" alt="Upcoming Red Weather show flyer">
-            <h3 class="show-name">Goalkeeper, House & Home, Red Weather, The Aurora Sound, Cabera</h3>
+        <div class="show press-width">
+            <img class="show-flyer press-header-photo" src="img/shows/23-03-05.jpeg" alt="Upcoming Red Weather show flyer">
+            <h3 class="show-name">The Blazing with Glazing Tour</h3>
             <p class="show-desc">
-                <b>Date:</b> April 13th, 2022<br>
+                <b>Date:</b> March 5th, 2023<br>
                 <b>Venue:</b> Riffhouse Pub<br>
-                <b>Tickets:</b> $10<br>
-                <b>Doors:</b> 6:00pm<br>
-                <b>Show:</b> 7:00pm<br>
+                <b>Tickets:</b> TBA<br>
+                <b>Doors:</b> TBA<br>
+                <b>Show:</b> TBA<br>
             </p>
-        </div> -->
+        </div>
             
     </div>
 
