Added a show (still need flyer)

--- a/shows.html
+++ b/shows.html
@@ -55,8 +55,21 @@
             <img class="show-flyer press-header-photo" src="img/shows/23-03-05.jpeg" alt="Upcoming Red Weather show flyer">
             <h3 class="show-name">The Blazing with Glazing Tour</h3>
             <p class="show-desc">
-                <b>Date:</b> March 5th, 2023<br>
+                <b>Date:</b>March 5th, 2023<br>
                 <b>Venue:</b> Riffhouse Pub<br>
+                <b>City:</b> Chesapeake, VA<br>
+                <b>Tickets:</b> TBA<br>
+                <b>Doors:</b> TBA<br>
+                <b>Show:</b> TBA<br>
+            </p>
+        </div>
+        <div class="show press-width">
+            <!-- <img class="show-flyer press-header-photo" src="img/shows/23-03-05.jpeg" alt="Upcoming Red Weather show flyer"> -->
+            <h3 class="show-name">Serious Matters & Wave Break</h3>
+            <p class="show-desc">
+                <b>Date:</b> April 23rd, 2023<br>
+                <b>Venue:</b> Garden Grove Brewing<br>
+                <b>City:</b> Richmond, VA<br>
                 <b>Tickets:</b> TBA<br>
                 <b>Doors:</b> TBA<br>
                 <b>Show:</b> TBA<br>
