--- a/shows.html
+++ b/shows.html
@@ -52,7 +52,7 @@
         
         <!-- TEMPLATE -->
         <div class="show press-width">
-            <img class="show-flyer press-header-photo" src="img/shows/23-03-05.jpeg" alt="Upcoming Red Weather show flyer">
+            <img class="show-flyer press-header-photo" src="img/shows/23-03-05.jpg" alt="Upcoming Red Weather show flyer">
             <h3 class="show-name">The Blazing with Glazing Tour</h3>
             <p class="show-desc">
                 <b>Date:&emsp;</b> March 5th, 2023<br>
