Info for show updated

--- a/shows.html
+++ b/shows.html
@@ -58,9 +58,8 @@
                 <b>Date:&emsp;</b> March 5th, 2023<br>
                 <b>Venue:&emsp;</b> Riffhouse Pub<br>
                 <b>City:&emsp;</b> Chesapeake, VA<br>
-                <b>Tickets:&emsp;</b> TBA<br>
-                <b>Doors:&emsp;</b> TBA<br>
-                <b>Show:&emsp;</b> TBA<br>
+                <b>Tickets:&emsp;</b> $10<br>
+                <b>Doors:&emsp;</b> 7:00pm<br>
             </p>
         </div>
         <div class="show press-width">
