Prepped for single release + swapped logo

--- a/shows.html
+++ b/shows.html
@@ -27,7 +27,7 @@
             <a class="nav-link font-bodega-black" href="http://merch.rdwthr.com" target="_blank">MERCH</a>
         </div>
         <div id="header-wrapper" class="img-wrapper">
-            <a href="/"><img class="header-logo"  src="img/logo-white.svg" alt="Red Weather Logo"></a>
+            <a href="/"><img class="header-logo"  src="img/cursive_logo_white.png" alt="Red Weather Logo"></a>
         </div>
         <div class="header-links">
             <a class="nav-link font-bodega-black" href="https://rdwthr.com/shows">SHOWS</a>
@@ -41,9 +41,19 @@
         <a class="mobile-link font-bodega-black" href="https://rdwthr.com/shows">SHOWS</a>
         <a class="mobile-link font-bodega-black" href="/#about">ABOUT</a>
     </div>
+    
+    <div id="mobile-banner" class="banner" style="display: none"> <!-- DELETE INLINE "display: none;" STYLE TO SHOW BANNER -->
+        <a class="banner-text-anchor" href=""><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "START AGAIN" STREAMING NOW!</p></a>
+    </div>
+
+    <div class="shows-banner">
+        <div class="banner" style="display: none;"> <!-- DELETE INLINE "display: none;" STYLE TO SHOW BANNER -->
+            <a class="banner-text-anchor" href=""><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "START AGAIN" STREAMING NOW!</p></a>
+        </div>
+    </div>
 
     <div class="shows-wrapper">
-        <h1 class="shows-title font-bodega-black">Upcoming Shows</h1>
+        <h1 class="shows-title font-bodega-black">UPCOMING SHOWS</h1>
 
         <!-- UNCOMMENT IF NO UPCOMING SHOWS -->
         <!-- <div class="show press-width">
@@ -78,7 +88,7 @@
     </div>
 
     <div id="past-shows" class="shows-wrapper">
-        <h2 class="shows-title font-bodega-black">Past Shows</h2>
+        <h2 class="shows-title font-bodega-black">PAST SHOWS</h2>
         <div class="past-shows-internal-wrapper">
             <div class="past-show-img">
                 <img class="show-flyer press-header-photo" src="img/shows/22-06-25.jpg" alt="Red Weather Show Flyer June 25, 2022">
