--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a class="nav-link font-bodega-black" href="http://merch.rdwthr.com" target="_blank">MERCH</a>
         </div>
         <div id="header-wrapper" class="img-wrapper">
-            <a href="/"><img class="header-logo"  src="img/logo-white.svg" alt="Red Weather Logo"></a>
+            <a href="/"><img class="header-logo"  src="img/cursive_logo_white.png" alt="Red Weather Logo"></a>
         </div>
         <div class="header-links">
             <a class="nav-link font-bodega-black" href="https://rdwthr.com/shows">SHOWS</a>
@@ -43,12 +43,12 @@
     </div>
 
     <div id="mobile-banner" class="banner" style="display: none;"> <!-- DELETE INLINE "display: none;" STYLE TO SHOW BANNER -->
-        <a class="banner-text-anchor" href=""><p id="banner-text" class="banner-text font-bodega-black">A COOL ANNOUNCEMENT GOES HERE</p></a>
+        <a class="banner-text-anchor" href=""><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "START AGAIN" STREAMING NOW!</p></a>
     </div>
 
     <div class="hero">
         <div class="banner" style="display: none;"> <!-- DELETE INLINE "display: none;" STYLE TO SHOW BANNER -->
-            <a class="banner-text-anchor" href=""><p id="banner-text" class="banner-text font-bodega-black">A COOL ANNOUNCEMENT GOES HERE</p></a>
+            <a class="banner-text-anchor" href=""><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "START AGAIN" STREAMING NOW!</p></a>
         </div>
     </div>
 
