--- a/presskit.html
+++ b/presskit.html
@@ -26,7 +26,7 @@
             <a class="nav-link font-bodega-black" href="http://merch.rdwthr.com" target="_blank">MERCH</a>
         </div>
         <div id="header-wrapper" class="img-wrapper">
-            <a href="/"><img class="header-logo"  src="img/logo-white.svg" alt="Red Weather Logo"></a>
+            <a href="/"><img class="header-logo"  src="img/cursive_logo_white.png" alt="Red Weather Logo"></a>
         </div>
         <div class="header-links">
             <a class="nav-link font-bodega-black" href="https://rdwthr.com/shows">SHOWS</a>
