Updated shows page

--- a/shows.html
+++ b/shows.html
@@ -62,26 +62,14 @@
         
         <!-- TEMPLATE -->
         <div class="show press-width">
-            <img class="show-flyer press-header-photo" src="img/shows/23-03-05.jpg" alt="Upcoming Red Weather show flyer">
-            <h3 class="show-name">The Blazing with Glazing Tour</h3>
-            <p class="show-desc">
-                <b>Date:&emsp;</b> March 5th, 2023<br>
-                <b>Venue:&emsp;</b> Riffhouse Pub<br>
-                <b>City:&emsp;</b> Chesapeake, VA<br>
-                <b>Tickets:&emsp;</b> $10<br>
-                <b>Doors:&emsp;</b> 7:00pm<br>
-            </p>
-        </div>
-        <div class="show press-width">
-            <!-- <img class="show-flyer press-header-photo" src="img/shows/23-03-05.jpeg" alt="Upcoming Red Weather show flyer"> -->
+            <img class="show-flyer press-header-photo" src="img/shows/23-04-23.jpg" alt="Upcoming Red Weather show flyer">
             <h3 class="show-name">Serious Matters & Wave Break</h3>
             <p class="show-desc">
                 <b>Date:&emsp;</b> April 23rd, 2023<br>
                 <b>Venue:&emsp;</b> Garden Grove Brewing<br>
                 <b>City:&emsp;</b> Richmond, VA<br>
-                <b>Tickets:&emsp;</b> TBA<br>
-                <b>Doors:&emsp;</b> TBA<br>
-                <b>Show:&emsp;</b> TBA<br>
+                <b>Tickets:&emsp;</b> FREE 21+<br>
+                <b>Doors:&emsp;</b> 7:00pm<br>
             </p>
         </div>
             
@@ -90,6 +78,9 @@
     <div id="past-shows" class="shows-wrapper">
         <h2 class="shows-title font-bodega-black">PAST SHOWS</h2>
         <div class="past-shows-internal-wrapper">
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/23-03-05.jpg" alt="Red Weather Show Flyer March 5, 2023">
+            </div>
             <div class="past-show-img">
                 <img class="show-flyer press-header-photo" src="img/shows/22-06-25.jpg" alt="Red Weather Show Flyer June 25, 2022">
             </div>
