--- a/shows.html
+++ b/shows.html
@@ -42,13 +42,13 @@
         <a class="mobile-link font-bodega-black" href="/#about">ABOUT</a>
     </div>
     
-    <div id="mobile-banner" class="banner" style="display: none"> <!-- DELETE INLINE "display: none;" STYLE TO SHOW BANNER -->
-        <a class="banner-text-anchor" href=""><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "START AGAIN" STREAMING NOW!</p></a>
+    <div id="mobile-banner" class="banner" style=""> <!-- DELETE INLINE "display: none;" STYLE TO SHOW BANNER -->
+        <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=iR8i0-m3vko" target="_blank"><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "START AGAIN" STREAMING NOW!</p></a>
     </div>
 
     <div class="shows-banner">
-        <div class="banner" style="display: none;"> <!-- DELETE INLINE "display: none;" STYLE TO SHOW BANNER -->
-            <a class="banner-text-anchor" href=""><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "START AGAIN" STREAMING NOW!</p></a>
+        <div class="banner" style=""> <!-- DELETE INLINE "display: none;" STYLE TO SHOW BANNER -->
+            <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=iR8i0-m3vko" target="_blank"><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "START AGAIN" STREAMING NOW!</p></a>
         </div>
     </div>
 
