New EPK Quotes + Update w/ Lyric Video Links

--- a/presskit.html
+++ b/presskit.html
@@ -46,16 +46,16 @@
             <h2 class="font-bodega-black">Press Kit</h2>
             <img class="press-header-photo" src="img/hero-photo.webp" alt="Photo of Red Weather band members on a couch">
             <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/iR8i0-m3vko" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/rWg5PMm6iKY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="press-header-quotes">
                 <li class="quote">
-                    <p class="font-gimlet-cond-bold">"I see potential here for this band to be the next big thing, a truly inspiring group of musicians with hearts on their sleeves and a mission to rock."</p>
+                    <p class="font-gimlet-cond-bold">"The best thing to emerge from the independent emo/indie rock scene in 2023."</p>
                     <p><strong class="font-bodega-light">-Indie Vision Music</strong></p>
                 </li>
                 <li class="quote">
-                    <p class="font-gimlet-cond-bold">Album & Song of the Year Nominee</p>
-                    <p><strong class="font-bodega-light">-2022 Veer Music Awards</strong></p>
+                    <p class="font-gimlet-cond-bold">"When Taking Back Sunday said 'tell all your friends', this is the band they were talking about."</p>
+                    <p><strong class="font-bodega-light">-Growing Up Punk Podcast</strong></p>
                 </li>
                 <li class="quote">
                     <p class="font-gimlet-cond-bold">"Red Weather . . . is an exceptional combination of catchy guitar hooks, emotional vulnerability and lyrics full of venom.”</p>
