--- a/shows.html
+++ b/shows.html
@@ -43,12 +43,12 @@
     </div>
     
     <div id="mobile-banner" class="banner" style=""> <!-- DELETE INLINE "display: none;" STYLE TO SHOW BANNER -->
-        <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=iR8i0-m3vko" target="_blank"><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "START AGAIN" STREAMING NOW!</p></a>
+        <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=rWg5PMm6iKY" target="_blank"><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "START AGAIN" STREAMING NOW!</p></a>
     </div>
 
     <div class="shows-banner">
         <div class="banner" style=""> <!-- DELETE INLINE "display: none;" STYLE TO SHOW BANNER -->
-            <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=iR8i0-m3vko" target="_blank"><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "START AGAIN" STREAMING NOW!</p></a>
+            <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=rWg5PMm6iKY" target="_blank"><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "START AGAIN" STREAMING NOW!</p></a>
         </div>
     </div>
 
