Added STT show + Updated Press Kit Photos

--- a/presskit.html
+++ b/presskit.html
@@ -94,14 +94,14 @@
 
         <div class="press-photos press-width">
             <div class="press-photos-header">
-                <h2 class="font-bodega-black">Images</h2>
+                <h2 class="font-bodega-black">Images & Logos</h2>
             <p class="font-gimlet-reg">(Click for full resolution / more)</p>
             </div>
             <li class="press-photo-list">
                 <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/hero-photo.webp" alt="Red Weather band members on a couch"></a>
                 <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/wall-purple-bg.webp" alt="Red Weather band members against a purple wall"></a>
-                <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/wall-white-bg.webp" alt="Red Weather band members against a gray wall"></a>
-                <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/logo-pack.webp" alt="Multiple logos for Red Weather Press Usage"></a>
+                <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/warehouseA.jpg" alt="Red Weather band members against a gray wall"></a>
+                <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/warehouseB.jpg" alt="Multiple logos for Red Weather Press Usage"></a>
             </li>
         </div>
 
