--- a/shows.html
+++ b/shows.html
@@ -61,6 +61,19 @@
         </div> -->
         
         <!-- TEMPLATE -->
+        <!-- <div class="show press-width">
+            <img class="show-flyer press-header-photo" src="img/shows/23-05-12.jpg" alt="Upcoming Red Weather show flyer">
+            <h3 class="show-name">Space EP 5 Year Anniversary</h3>
+            <p class="show-desc">
+                <b>Date:&emsp;</b> May 12, 2023<br>
+                <b>Venue:&emsp;</b> Riffhouse Pub<br>
+                <b>City:&emsp;</b> Chesapeake, VA<br>
+                <b>Tickets:&emsp;</b> $12 Adv. / $15 Drs.<br>
+                <b>Buy Tickets:</b> <a id="ticket-link" href="http://space5years.sametimetmrw.com">CLICK HERE</a><br>
+                <b>Doors:&emsp;</b> 7:00pm<br>
+            </p>
+        </div> -->
+
         <div class="show press-width">
             <img class="show-flyer press-header-photo" src="img/shows/23-04-23.jpg" alt="Upcoming Red Weather show flyer">
             <h3 class="show-name">Serious Matters & Wave Break</h3>
@@ -69,6 +82,18 @@
                 <b>Venue:&emsp;</b> Garden Grove Brewing<br>
                 <b>City:&emsp;</b> Richmond, VA<br>
                 <b>Tickets:&emsp;</b> FREE 21+<br>
+                <b>Doors:&emsp;</b> 7:00pm<br>
+            </p>
+        </div>
+        <div class="show press-width">
+            <img class="show-flyer press-header-photo" src="img/shows/23-05-12.jpg" alt="Upcoming Red Weather show flyer">
+            <h3 class="show-name">Space EP 5 Year Anniversary</h3>
+            <p class="show-desc">
+                <b>Date:&emsp;</b> May 12th, 2023<br>
+                <b>Venue:&emsp;</b> Riffhouse Pub<br>
+                <b>City:&emsp;</b> Chesapeake, VA<br>
+                <b>Tickets:&emsp;</b> $12 Adv. / $15 Doors<br>
+                <b>Buy Tickets:&emsp;</b> <a id="ticket-link" href="http://space5years.sametimetmrw.com" target="_blank">HERE</a><br>
                 <b>Doors:&emsp;</b> 7:00pm<br>
             </p>
         </div>
